fix: navbar z-index and flatList heading underline issue.

--- a/src/Styles/FlatList.css
+++ b/src/Styles/FlatList.css
@@ -12,15 +12,15 @@
     background: #eee; border-radius: 10px;
     position: relative;
 }
-.banner img{ height: 45vh; position: absolute; right: 20px; bottom: 0;}
+.banner img{ height: 45vh; position: absolute; right: 20px; bottom: 20px;}
 .banner .text{ position: absolute; top: 10%; left: 5%; padding: 20px;}
 .banner .text h1{ font-size: 10vh; font-family: var(--primary-font-bold); color: var(--primary-color-dark);}
 .banner .text h1 span{ margin-right: 10px; font-size: 25px; font-weight: 400; font-family: var(--primary-font); color: #413E59;}
 .banner .text h3{ font-size: 16px; font-family: var(--primary-font); color: #413E59;}
 
 /*  ===== FLAT LIST ===== */
-.mainContent h1{ font-family: var(--primary-font); font-weight: 300; margin: 40px 0 40px 0; font-size: 3vw; position: relative;}
-.mainContent h1::after{ content: ''; position: absolute; bottom: -10px; left: 0; width: 10%; height: 4px; background: var(--primary-color-dark); }
+.mainContent .heading{ font-family: var(--primary-font); font-weight: 300; margin: 40px 0 40px 0; font-size: 3vw; position: relative;}
+.mainContent .heading::after{ content: ''; position: absolute; bottom: -10px; left: 0; width: 10%; height: 4px; background: var(--primary-color-dark); border-radius: 10px;}
 .flatList .mainContent .flats{ margin-top: 0; }
 .flatList .mainContent .flats .flat{
     width: 30%; height: 65vh; background: #fff;
